--- a/public/index.html
+++ b/public/index.html
@@ -156,6 +156,24 @@
       color: var(--muted);
       margin-top: 4rem;
     }
+ /* Minimal muted button for team cards */
+.btn-outline-muted {
+  background: transparent; /* minimal background */
+  color: var(--muted);     /* muted text */
+  border: 1px solid rgba(255, 255, 255, 0.15); /* subtle border */
+  padding: 0.5rem 1rem;
+  border-radius: var(--r);
+  text-decoration: none;   /* remove underline */
+  font-weight: 500;
+  transition: all 0.15s ease;
+  display: inline-block;
+}
+
+.btn-outline-muted:hover {
+  background: rgba(255, 255, 255, 0.08); /* slight highlight */
+  border-color: rgba(255, 255, 255, 0.25); /* subtle border change */
+  color: var(--accent); /* text highlight */
+}
 
     footer a {
       color: var(--accent);
@@ -257,6 +275,52 @@
     </div>
   </section>
 
+
+  <!--Meet The Team-->
+<section id="team">
+  <h2>Meet The Team</h2>
+  <p>Our passionate team is dedicated to building tools that make project management simple, effective, and enjoyable.</p>
+  <div class="grid">
+
+    <div class="card" style="text-align:center;">
+      <img src="./img/bikram - Copy.jpg" alt="Team Member"
+           style="width:120px; height:120px; border-radius:50%; margin-bottom:1rem; object-fit:cover;">
+      <h3>Bikram Tamang</h3>
+      <p>Team Lead</p>
+      <a href="team/bikram.html" class="btn-outline-muted" style="margin-top: 1rem;text-decoration:none">View Profile</a>
+    </div>
+
+    <div class="card" style="text-align:center;">
+      <img src="./img/Neha.jpg" alt="Team Member"
+           style="width:120px; height:120px; border-radius:50%; margin-bottom:1rem; object-fit:cover;">
+      <h3>Neha K.C (Khatri)</h3>
+      <p>UI/UX Designer</p>
+      <a href="team/neha.html" class="btn-outline-muted" style="margin-top: 1rem;text-decoration:none">View Profile</a>
+    </div>
+
+    <div class="card" style="text-align:center;">
+      <img src="./img/Sandeep.jpg" alt="Team Member"
+           style="width:120px; height:120px; border-radius:50%; margin-bottom:1rem; object-fit:cover;">
+      <h3>Sandeep Meche</h3>
+      <p>Front-End Developer</p>
+      <a href="team/sandeep.html" class="btn-outline-muted" style="margin-top: 1rem;text-decoration:none">View Profile</a>
+    </div>
+
+    <div class="card" style="text-align:center;">
+      <img src="./img/Aditya.jpg" alt="Team Member"
+           style="width:120px; height:120px; border-radius:50%; margin-bottom:1rem; object-fit:cover;">
+      <h3>Aaditya Thapaliya</h3>
+      <p>Resource Manager</p>
+      <a href="team/aaditya.html" class="btn-outline-muted" style="margin-top: 1rem; text-decoration:none">View Profile</a>
+    </div>
+
+  </div>
+</section>
+
+
+
+
+
   <!-- Subscribe -->
   <section id="subscribe">
     <h2>Subscribe for Updates</h2>
@@ -271,7 +335,7 @@
   <footer>
     <p>© 2025 Planhubb. All rights reserved.</p>
     <p>
-      <a href="#">Privacy</a> | <a href="#">Terms</a> | <a href="#">Contact</a>
+      <a href="privacy.html">Privacy</a> | <a href="terms.html">Terms</a> | <a href="contact.html">Contact</a>
     </p>
   </footer>
 
